--- a/roles/couchbaselabs.couchbase-server/templates/etc_sysctl.d_couchbase-server.conf.j2
+++ b/roles/couchbaselabs.couchbase-server/templates/etc_sysctl.d_couchbase-server.conf.j2
@@ -16,6 +16,11 @@ vm.swappiness = {{ couchbase_server_swappiness }}
 # Must be less than or equal to somaxconn or it will be truncated
 net.ipv4.tcp_max_syn_backlog = {{ couchbase_server_tcp_max_syn_backlog }}
 
+# Enables reuse of TIME-WAIT sockets to reduce the time spent constructingi
+# connections.  This setting is safe for all Couchbase protocols.
+net.ipv4.tcp_tw_reuse = 1
+
+
 ###
 ### ADDITIONAL EXPERIMENTAL TUNING
 ### Uncomment to activate
@@ -35,7 +40,7 @@ net.ipv4.tcp_max_syn_backlog = {{ couchbase_server_tcp_max_syn_backlog }}
 # net.ipv4.tcp_mtu_probing = {{ couchbase_server_mtu_probing }}
 
 # Increase OS filesystem limit for open files
-# fs.file-max = {{ couchbase_server_file_max }}
+fs.file-max = {{ couchbase_server_file_max }}
 
 # Increase processor input queue length
 # net.core.netdev_max_backlog = {{ couchbase_server_netdev_max_backlog }}
@@ -60,12 +65,19 @@ net.ipv4.tcp_max_syn_backlog = {{ couchbase_server_tcp_max_syn_backlog }}
 
 # Increase the frequency of keepalive probes
 # Helps to quickly identify and time out dead connections
-# net.ipv4.tcp_keepalive_intvl = {{ couchbase_server_tcp_keepalive_intvl }}
+net.ipv4.tcp_keepalive_intvl = {{ couchbase_server_tcp_keepalive_intvl }}
 
 # Limits the maximum memory used to 200MB before pdflush
 # The default value can overwhelm the storage system once flushed.
-# vm.dirty_bytes = {{ couchbase_server_dirty_bytes }}
+vm.dirty_bytes = {{ couchbase_server_dirty_bytes }}
 
 # The lower threshold for vm.dirty_bytes
-# vm.dirty_background_bytes = {{ couchbase_server_dirty_background_bytes }}
+vm.dirty_background_bytes = {{ couchbase_server_dirty_background_bytes }}
 
+# Increases the rate at which data is flushed to disk.  This is particularlyi
+# beneficial for SAN and EBS storage.
+vm.dirty_expire_centisecs = 300
+vm.dirty_writeback_centisecs = 100
+
+# Disables NUMA zone reclaim algorithm.  This tends to decrease read latencies.
+vm.zone_reclaim_mode = 0
